add new string index-of with different cases

--- a/staff/xavi-grandes/strings/tests.html
+++ b/staff/xavi-grandes/strings/tests.html
@@ -25,5 +25,8 @@
 
     <script src="to-capital-case.js"></script>
     <script src="to-capital-case.test.js"></script>
+
+    <script src="index-of.js"></script>
+    <script src="index-of.test.js"></script>
 </body>
 </html>
