--- a/staff/ignacio-nuñez/functions-tests/strings/index.html
+++ b/staff/ignacio-nuñez/functions-tests/strings/index.html
@@ -12,5 +12,8 @@
 
     <script src="indexof.js"></script>
     <script src="indexof.test.js"></script>
+
+    <script src="to-capital-case.js"></script>
+    <script src="to-capital-case.test.js"></script>
 </body>
 </html>
