--- a/staff/ignacio-nuñez/functions-tests/arrays/index.html
+++ b/staff/ignacio-nuñez/functions-tests/arrays/index.html
@@ -31,5 +31,8 @@
 
     <script src="filter.js"></script>
     <script src="filter.test.js"></script>
+
+    <script src="reduce.js"></script>
+    <script src="reduce.test.js"></script>
 </body>
 </html>
