added the finished array method -flat- and -reduce-. Also orrected the -forEach- method.

--- a/staff/jaume-rodriguez/strings/tests.html
+++ b/staff/jaume-rodriguez/strings/tests.html
@@ -16,6 +16,7 @@
     <script src="repeat/repeat.js"></script>
     <script src="repeat/repeat.test.js"></script>
     <script src="slice/slice.js"></script>
-    <script src="slice/slice.test.js"></script>
+    <script src="toCapitalCase/toCapitalCase.js"></script>
+    <script src="toCapitalCase/toCapitalCase.test.js"></script>
   </body>
 </html>
