--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -37,5 +37,7 @@
     <script src="findIndex/findIndex.test.js"></script>
     <script src="flat/flat.js"></script>
     <script src="flat/flat.test.js"></script>
+    <script src="reduce/reduce.js"></script>
+    <script src="reduce/reduce.test.js"></script>
   </body>
 </html>
