--- a/staff/federico-alejandro/arrays/test.html
+++ b/staff/federico-alejandro/arrays/test.html
@@ -45,5 +45,8 @@
 
     <script src="filter.js"></script>
     <script src="filter.test.js"></script>
+
+    <script src="reduce.js"></script>
+    <script src="reduce.test.js"></script>
 </body>
 </html>
