added new array (every.js) to the arrays folder with 1 case to test

--- a/staff/xavi-grandes/arrays/test-arrays.html
+++ b/staff/xavi-grandes/arrays/test-arrays.html
@@ -18,5 +18,8 @@
 
     <script src="concat.js"></script>
     <script src="concat.test.js"></script>
+
+    <script src="every.js"></script>
+    <script src="every.test.js"></script>
 </body>
 </html>
