--- a/staff/yubal-hormiga/Arrays/test.html
+++ b/staff/yubal-hormiga/Arrays/test.html
@@ -9,6 +9,11 @@
 <body>
 <body>  
 
+
+    <script src="reduce/reduce.js"></script>
+    <script src="reduce/reduec.test.js"></script>
+    <script src="find-index/findindex.js"></script>
+    <script src="find-index/findindex.test.js"></script>
     <script src="filter/filter.js"></script>
     <script src="filter/filter.test.js"></script>
     <script src="every/every.js"></script>
