--- a/staff/yubal-hormiga/Strings/tests.html
+++ b/staff/yubal-hormiga/Strings/tests.html
@@ -7,7 +7,8 @@
     <title>Strings</title>
 </head>
 <body>
-       
+    <script src="tocapitalcase/to-capital-case.js"></script>
+    <script src="tocapitalcase/to-capital-case.test.js"></script>
     <script src="at/at.js"></script>
     <script src="at/at.test.js"></script>
     <script src="concat/concat.js"></script>
