added the finished array method -reduceRight-. Also add new predefined initialValue on array method -reduce-. The array method -group- is on testing

--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -39,5 +39,9 @@
     <script src="flat/flat.test.js"></script>
     <script src="reduce/reduce.js"></script>
     <script src="reduce/reduce.test.js"></script>
+    <script src="group/group.js"></script>
+    <script src="group/group.test.js"></script>
+    <script src="reduceRight/reduceRight.js"></script>
+    <script src="reduceRight/reduceRight.test.js"></script>
   </body>
 </html>
