finish every test and start with foreach array test

--- a/staff/xavi-grandes/arrays/test-arrays.html
+++ b/staff/xavi-grandes/arrays/test-arrays.html
@@ -21,5 +21,9 @@
 
     <script src="every.js"></script>
     <script src="every.test.js"></script>
+
+    <script src="foreach.js"></script>
+    <script src="foreach.test.js"></script>
+    
 </body>
 </html>
