--- a/staff/federico-lopez/arrays/tests.html
+++ b/staff/federico-lopez/arrays/tests.html
@@ -13,5 +13,7 @@
     <script src="join.test.js"></script>
     <script src="concat.js"></script>
     <script src="concat.test.js"></script>
+    <script src="filter.js"></script>
+    <script src="filter.test.js"></script>
   </body>
 </html>
