created new vanilla app versions with its component, pages and logics

--- a/staff/xavi-grandes/vanilla-app-v1/index.html
+++ b/staff/xavi-grandes/vanilla-app-v1/index.html
@@ -19,6 +19,11 @@
 
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate-user.js"></script>
+    <script src="logic/update-user-email.js"></script>
+    <script src="logic/retrieve-tasks.js"></script>
+    <script src="logic/create-task.js"></script>
+    <script src="logic/update-task-text.js"></script>
+    <script src="logic/delete-task.js"></script>
     
     <script src="componentes/header-panel.js"></script>
     <script src="componentes/menu-panel.js"></script>
