strings and array tests, start changing vanilla app to tailwind design

--- a/staff/cristina-marquez/arrays/tests.html
+++ b/staff/cristina-marquez/arrays/tests.html
@@ -21,6 +21,9 @@
     <script src="includes.js"></script>
     <script src="includes.test.js"></script>
 
+    <script src="find.js"></script>
+    <script src="find.test.js"></script>
+
 
 
 </body>
