add app variables var

--- a/staff/federico-alejandro/vanilla-app/index.html
+++ b/staff/federico-alejandro/vanilla-app/index.html
@@ -15,23 +15,26 @@
     <script src="utils/regex.js"></script>
 
     <script src="data/users.js"></script>
+    <script src="data/tasks.js"></script>
 
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate-user.js"></script>
     <script src="logic/update-user-email.js"></script>
     <script src="logic/update-user-name.js"></script>
-    <script src="logic/update-user-phone.js"></script>
+    <script src="logic/retrieve-tasks.js"></script>
+    <script src="logic/update-task-text.js"></script>
+    <script src="logic/create-task.js"></script>
+    <script src="logic/delete.task.js"></script>
+    <script src="logic/update-user-password.js"></script>
 
     <script src="components/menu-panel.js"></script>
     <script src="components/header-panel.js"></script>
     <script src="components/settings-panel.js"></script>
     <script src="components/tasks-panel.js"></script>
-    <script src="components/create-task.js"></script>
     
-
-    <script src="pages/home-page.js"></script>
     <script src="pages/login-page.js"></script>
     <script src="pages/register-page.js"></script>
+    <script src="pages/home-page.js"></script>
     
     <script src="index.js"></script>
 
