--- a/staff/ignacio-nuñez/vanila-app/index.html
+++ b/staff/ignacio-nuñez/vanila-app/index.html
@@ -6,9 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log In</title>
-
+    
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,200,0,0" />
     <link rel="stylesheet" href="style.css">
+    
+    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 </head>
 
 <body>
