addd test strings...

--- a/staff/sergio-asensio/strings/test.html
+++ b/staff/sergio-asensio/strings/test.html
@@ -7,12 +7,17 @@
     <title>strings</title>
 </head>
 <body>
-    <script src="substring.js"></script>
-    <script src="substring.test.js"></script>
+    <!-- <script src="substring.js"></script>
+    <script src="substring.test.js"></script> -->
 
     <!-- <script src="concat.js"></script>
     <script src="concat.test.js"></script> -->
 
+    <!-- <script src="repeat.js"></script>
+    <script src="repeat.test.js"></script> -->
+
+    <script src="slice.js"></script>
+    <script src="slice.test.js"></script>
 
 
 
