--- a/staff/sergio-asensio/arrays/test.html
+++ b/staff/sergio-asensio/arrays/test.html
@@ -8,19 +8,25 @@
 </head>
 <body>
     <!-- <script src="at.js"></script>
-    <script src="at.test.js"></script> 
+    <script src="at.test.js"></script>  -->
 
-    <script src="concat.js"></script>
+    <!-- <script src="concat.js"></script>
     <script src="concat.test.js"></script> -->
 
-    <script src="includes.js"></script>
-    <script src="includes.test.js"></script>
+    <!-- <script src="includes.js"></script>
+    <script src="includes.test.js"></script> -->
 
     <!-- <script src="indexof.js"></script>
-    <script src="indexof.test.js"></script>
+    <script src="indexof.test.js"></script> -->
 
-    <script src="join.js"></script>
+    <!-- <script src="join.js"></script>
     <script src="join.test.js"></script> -->
+
+    <script src="find.js"></script>
+    <script src="find.test.js"></script>
+
+    <!-- <script src="findIndex.js"></script>
+    <script src="findIndex.test.js"></script> -->
 
 
 
