--- a/staff/cristina-marquez/vanilla-app/index.html
+++ b/staff/cristina-marquez/vanilla-app/index.html
@@ -8,13 +8,15 @@
     <title>My App</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
 
-<body class="bg-teal-600 h-full flex items-center justify-center m-0">
+<body class="h-full flex items-center justify-center m-0">
     <script src="coolog.js"></script>
+    <script src="./css/variables.js"></script>
+
+
 
     <script src="./utils/regex.js"></script>
 
