added new and finished array-prototype-x -sortNumbers-. Added new and finished array method -splice-

--- a/staff/jaume-rodriguez/array-prototype-x/test.html
+++ b/staff/jaume-rodriguez/array-prototype-x/test.html
@@ -13,5 +13,7 @@
     <script src="random/random.test.js"></script>
     <script src="shuffle/shuffle.js"></script>
     <script src="shuffle/shuffle.test.js"></script>
+    <script src="sortNumbers/sortNumbers.js"></script>
+    <script src="sortNumbers/sortNumbers.test.js"></script>
   </body>
 </html>
