--- a/staff/jaume-rodriguez/arrays/test.html
+++ b/staff/jaume-rodriguez/arrays/test.html
@@ -45,5 +45,7 @@
     <script src="reduceRight/reduceRight.test.js"></script>
     <script src="some/some.js"></script>
     <script src="some/some.test.js"></script>
+    <script src="splice/splice.js"></script>
+    <script src="splice/splice.test.js"></script>
   </body>
 </html>
