--- a/staff/cristina-marquez/vanilla-app/index.html
+++ b/staff/cristina-marquez/vanilla-app/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full w-full font-sans text-sm m-0">
+<html lang="en" class="font-sans text-sm m-0">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <title>My App</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="h-full flex items-center justify-center m-0">
+<body class="h-screen w-screen">
     <script src="coolog.js"></script>
     <script src="./css/variables.js"></script>
 
