--- a/staff/xavi-grandes/arrays/test-arrays.html
+++ b/staff/xavi-grandes/arrays/test-arrays.html
@@ -24,6 +24,12 @@
 
     <script src="foreach.js"></script>
     <script src="foreach.test.js"></script>
+
+    <script src="find.js"></script>
+    <script src="find.test.js"></script>
     
+    <script src="reduce.js"></script>
+    <script src="reduce.test.js"></script>
+
 </body>
 </html>
