add forEach and pop in burray

--- a/staff/manuel-barzi/burray/specs.html
+++ b/staff/manuel-barzi/burray/specs.html
@@ -23,6 +23,9 @@
     <script src="Burray.prototype.pop.js"></script>
     <script src="Burray.prototype.pop.spec.js"></script>
 
+    <script src="Burray.prototype.forEach.js"></script>
+    <script src="Burray.prototype.forEach.spec.js"></script>
+
     <!-- ... -->
 </body>
 </html>
