finsh the function and cases to test with array function "Push"

--- a/staff/xavi-grandes/arrays/test-arrays.html
+++ b/staff/xavi-grandes/arrays/test-arrays.html
@@ -31,5 +31,7 @@
     <script src="reduce.js"></script>
     <script src="reduce.test.js"></script>
 
+    <script src="push.js"></script>
+    <script src="push.test.js"></script>
 </body>
 </html>
