Add script of Burray.prototype.push and test

--- a/staff/xavi-grandes/Burray/burray.html
+++ b/staff/xavi-grandes/Burray/burray.html
@@ -15,5 +15,8 @@
 
     <script src="Burray.js"></script>
     <script src="Burray.spec.js"></script>
+
+    <script src="push/Burray.prototype.push.js"></script>
+    <script src="push/Burray.prototype.push.test.js"></script>
 </body>
 </html>
