--- a/staff/sergio-asensio/arrays/test.html
+++ b/staff/sergio-asensio/arrays/test.html
@@ -22,11 +22,14 @@
     <!-- <script src="join.js"></script>
     <script src="join.test.js"></script> -->
 
-    <script src="find.js"></script>
-    <script src="find.test.js"></script>
+    <!-- <script src="find.js"></script>
+    <script src="find.test.js"></script> -->
 
     <!-- <script src="findIndex.js"></script>
     <script src="findIndex.test.js"></script> -->
+
+    <script src="push.js"></script>
+    <script src="push.test.js"></script>
 
 
 
