--- a/staff/sergio-asensio/strings/test.html
+++ b/staff/sergio-asensio/strings/test.html
@@ -16,8 +16,11 @@
     <!-- <script src="repeat.js"></script>
     <script src="repeat.test.js"></script> -->
 
-    <script src="slice.js"></script>
-    <script src="slice.test.js"></script>
+    <!-- <script src="slice.js"></script>
+    <script src="slice.test.js"></script> -->
+
+    <script src="indexOf.js"></script>
+    <script src="indexOf.test.js"></script>
 
 
 
