add test and impl of burray includes and map

--- a/staff/manuel-barzi/burray/specs.html
+++ b/staff/manuel-barzi/burray/specs.html
@@ -26,6 +26,12 @@
     <script src="Burray.prototype.forEach.js"></script>
     <script src="Burray.prototype.forEach.spec.js"></script>
 
+    <script src="Burray.prototype.includes.js"></script>
+    <script src="Burray.prototype.includes.spec.js"></script>
+
+    <script src="Burray.prototype.map.js"></script>
+    <script src="Burray.prototype.map.spec.js"></script>
+
     <!-- ... -->
 </body>
 </html>
