add new strings (push and includes)

--- a/staff/xavi-grandes/Burray/burray.html
+++ b/staff/xavi-grandes/Burray/burray.html
@@ -17,6 +17,9 @@
     <script src="Burray.spec.js"></script>
 
     <script src="push/Burray.prototype.push.js"></script>
-    <script src="push/Burray.prototype.push.test.js"></script>
+    <script src="push/Burray.prototype.push.spec.js"></script>
+
+    <script src="includes/Burray.prototype.include.js"></script>
+    <script src="includes/Burray.prototype.include.spec.js"></script>
 </body>
 </html>
