wc and jurasic park game

--- a/staff/ignacio-nuñez/array-prototype-x/tests.html
+++ b/staff/ignacio-nuñez/array-prototype-x/tests.html
@@ -18,5 +18,8 @@
 
     <script src="splice.js"></script>
     <script src="splice.test.js"></script>
+
+    <script src="array-to-object.js"></script>
+    <script src="array-to-object.test.js"></script>
 </body>
 </html>
