--- a/staff/ignacio-nuñez/wc-game/wc.html
+++ b/staff/ignacio-nuñez/wc-game/wc.html
@@ -7,6 +7,10 @@
     <title>WC GAME</title>
 </head>
 <body>
-    <script src="wc.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="wcCreator.js"></script>
+    <script src="wcMovements.js"></script>
+    <script src="pooGenerator.js"></script>
+    <script src="hasTouch.js"></script>
 </body>
 </html>
