--- a/staff/manuel-barzi/burray.1/specs.html
+++ b/staff/manuel-barzi/burray.1/specs.html
@@ -15,17 +15,21 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/4.4.0/boot1.js"></script>
 
     <script src="Burray.js"></script>
-
     <script src="Burray.spec.js"></script>
 
+    <script src="Burray.prototype.push.js"></script>
     <script src="Burray.prototype.push.spec.js"></script>
 
+    <script src="Burray.prototype.pop.js"></script>
     <script src="Burray.prototype.pop.spec.js"></script>
 
+    <script src="Burray.prototype.forEach.js"></script>
     <script src="Burray.prototype.forEach.spec.js"></script>
 
+    <script src="Burray.prototype.includes.js"></script>
     <script src="Burray.prototype.includes.spec.js"></script>
 
+    <script src="Burray.prototype.map.js"></script>
     <script src="Burray.prototype.map.spec.js"></script>
 
     <!-- ... -->
