--- a/stuff/react.3/index.html
+++ b/stuff/react.3/index.html
@@ -13,13 +13,8 @@
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-    <script src="coolog.js"></script>
     
-    <script src="components/App.jsx" type="text/babel"></script>
-    <script src="components/SuperApp.jsx" type="text/babel"></script>
-    <script src="index.jsx" type="text/babel"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
