--- a/staff/isaac-diaz/arrays/test.html
+++ b/staff/isaac-diaz/arrays/test.html
@@ -10,6 +10,12 @@
     <script src="at.js"></script>
     <script src="at.test.js"></script>
 
+    <script src="concat.js"></script>
+    <script src="concat.test.js"></script>
+
+    <script src="for-each.js"></script>
+    <script src="for-each.test.js"></script>
+
     <script src="includes.js"></script>
     <script src="includes.test.js"></script>
 
