--- a/staff/isaac-diaz/strings/test.html
+++ b/staff/isaac-diaz/strings/test.html
@@ -6,8 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test</title>
 </head>
-<body>    
+<body> 
+    <script src="index-of.js"></script>    
+    <script src="index-of.test.js"></script>
+
+    <script src="slice.js"></script>
+    <script src="slice.test.js"></script>
+
     <script src="substring.js"></script>
     <script src="substring.test.js"></script>
+
+    <script src="to-capital-case.js"></script>
+    <script src="to-capital-case.test.js"></script>
 </body>
 </html>
