--- a/staff/isaac-diaz/vanilla-app/index.html
+++ b/staff/isaac-diaz/vanilla-app/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <script src="https://cdn.tailwindcss.com"></script> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
 </head>
 <body>
@@ -19,9 +19,10 @@
     <script src="logic/register-user.js"></script>
     <script src="logic/authenticate-user.js"></script>
     <script src="logic/update-user-email.js"></script>
-    <script src="logic/create-task.js"></script>
     <script src="logic/retrieve-tasks.js"></script>
+    <script src="logic/create-task.js"></script>    
     <script src="logic/update-task-text.js"></script>
+    <script src="logic/delete-task.js"></script>
 
     <script src="components/header-panel.js"></script>    
     <script src="components/menu-panel.js"></script>
