update wc game and create react app

--- a/staff/ignacio-nuñez/wc-game/wc.html
+++ b/staff/ignacio-nuñez/wc-game/wc.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="counters.js"></script>
     <script src="wcCreator.js"></script>
     <script src="wcMovements.js"></script>
     <script src="pooGenerator.js"></script>
-    <script src="hasTouch.js"></script>
+    <script src="logic/countersConditions.js"></script>
 </body>
 </html>
