--- a/staff/manuel-barzi/react-app/index.html
+++ b/staff/manuel-barzi/react-app/index.html
@@ -12,8 +12,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="h-full flex items-center justify-center">
-    <div id="root"></div>
+<body class="h-full">
+    <div id="root" class="h-full flex items-center justify-center"></div>
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
