--- a/staff/jaume-rodriguez/xapp/index.html
+++ b/staff/jaume-rodriguez/xapp/index.html
@@ -28,6 +28,14 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script src="libs/coolog.js"></script>
+    <script src="utils/regex.js"></script>
+
+    <script src="data/tasks.js"></script>
+    <script src="data/users.js"></script>
+
+    <script src="logic/update-user-credentials.js"></script>
+    <script src="logic/authenticate.js"></script>
+    <script src="logic/register-user.js"></script>
 
     <script src="pages/SettingsAccountPage.jsx" type="text/babel"></script>
     <script src="pages/HomePage.jsx" type="text/babel"></script>
