--- a/staff/cristina-marquez/react-app/index.html
+++ b/staff/cristina-marquez/react-app/index.html
@@ -18,12 +18,21 @@
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <script src="utils/coolog.js"></script>
+    <script src="./utils/regex.js"></script>
+
+    <script src="./data/users.js"></script>
+    <script src="./data/tasks.js"></script>
+
+    <script src="./logic/authenticate-user.js"></script>
+    <script src="./logic/retrieve-task.js"></script>
+
 
     <script src="./pages/LoginPage.jsx" type="text/babel"></script>
     <script src="./pages/RegisterPage.jsx" type="text/babel"></script>
+    <script src="./pages/HomePage.jsx" type="text/babel"></script>
 
     <script src="./components/App.jsx" type="text/babel"></script>
 
