--- a/staff/armando-alonso/arrays/tests.html
+++ b/staff/armando-alonso/arrays/tests.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-    <script src="at.js"></script>
-    <script src="at.test.js"></script>
+    <script src="at/at.js"></script>
+    <script src="at/at.test.js"></script>
 
     <script src="concat.js"></script>
     <script src="concat.test.js"></script>
