--- a/staff/armando-alonso/vanilla-my-test/index.html
+++ b/staff/armando-alonso/vanilla-my-test/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    
     <title>My Trello</title>
 </head>
-<body>
+<body class="h-full flex items-center justify-center bg-[#fffde7]">
     <script src="libs/coolog.js"></script>
 
     <script src="data/users.js"></script>
