--- a/staff/jaume-rodriguez/xapp/index.html
+++ b/staff/jaume-rodriguez/xapp/index.html
@@ -33,6 +33,10 @@
     <script src="data/tasks.js"></script>
     <script src="data/users.js"></script>
 
+    <script src="logic/create-task.js"></script>
+    <script src="logic/delete-task.js"></script>
+    <script src="logic/retrieve-tasks.js"></script>
+    <script src="logic/update-task.js"></script>
     <script src="logic/update-user-credentials.js"></script>
     <script src="logic/authenticate.js"></script>
     <script src="logic/register-user.js"></script>
