--- a/staff/ignacio-nuñez/react-app/index.html
+++ b/staff/ignacio-nuñez/react-app/index.html
@@ -17,7 +17,28 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
+    <script src="./utils/regex.js"></script>
+
+    <script src="./data/users.js"></script>
+    <script src="./data/tasks.js"></script>
+
+    <script src="./logic/register-user.js"></script>
+    <script src="./logic/authenticate-user.js"></script>
+    <script src="./logic/update-user-dates.js"></script>
+    <script src="./logic/create-task.js"></script>
+    <script src="./logic/update-task.js"></script>
+    <script src="./logic/delete-task.js"></script>
+    <script src="./logic/retrieve-task.js"></script>
+
+    <script src="components/NavBar.jsx" type="text/babel"></script>
+
+
+    <script src="pages/HomePage.jsx" type="text/babel"></script>
     <script src="pages/LoginPage.jsx" type="text/babel"></script>
+    <script src="pages/RegisterPage.jsx" type="text/babel"></script>
+    <script src="pages/SettingsPage.jsx" type="text/babel"></script>
+
+
     <script src="components/App.jsx" type="text/babel"></script>
 
     <script src="index.jsx" type="text/babel"></script>
