--- a/staff/xavi-grandes/React-app/index.html
+++ b/staff/xavi-grandes/React-app/index.html
@@ -13,7 +13,7 @@
 
 <body class="h-full">
     
-    <div class="h-full flex items-center justify-center bg-gradient-to-b from-green-400 to-stone-50 bg-no-repeat" id="root"></div>
+    <div class="h-full flex items-center justify-center bg-gradient-to-b from-blue-400 to-stone-50 bg-no-repeat" id="root"></div>
 
     <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
