--- a/staff/jaume-rodriguez/xapp/index.html
+++ b/staff/jaume-rodriguez/xapp/index.html
@@ -10,24 +10,19 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..300,0..1,-50..200"
     />
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div id="root"></div>
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
+    <script src="libs/react.development.js"></script>
+    <script src="libs/react-dom.development.js"></script>
+    <script src="libs/babel.min.js"></script>
     <script src="libs/coolog.js"></script>
+
     <script src="utils/regex.js"></script>
 
     <script src="data/tasks.js"></script>
@@ -36,7 +31,8 @@
     <script src="logic/create-task.js"></script>
     <script src="logic/delete-task.js"></script>
     <script src="logic/retrieve-tasks.js"></script>
-    <script src="logic/update-task.js"></script>
+    <script src="logic/update-task-status.js"></script>
+    <script src="logic/update-task-text.js"></script>
     <script src="logic/update-user-credentials.js"></script>
     <script src="logic/authenticate.js"></script>
     <script src="logic/register-user.js"></script>
