react app create, delete and update task logic

--- a/staff/cristina-marquez/react-app/index.html
+++ b/staff/cristina-marquez/react-app/index.html
@@ -16,9 +16,9 @@
 <body>
     <div id="root" class="h-screen w-screen"></div>
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script crossorigin src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="./libs/react.development.js"></script>
+    <script src="./libs/react-dom.development.js"></script>
+    <script src="./libs/babel.min.js"></script>
 
     <script src="utils/coolog.js"></script>
     <script src="./utils/regex.js"></script>
@@ -28,6 +28,9 @@
 
     <script src="./logic/authenticate-user.js"></script>
     <script src="./logic/retrieve-task.js"></script>
+    <script src="./logic/update-task.js"></script>
+    <script src="./logic/create-task.js"></script>
+    <script src="./logic/delete-task.js"></script>
 
 
     <script src="./pages/LoginPage.jsx" type="text/babel"></script>
