Update React App

--- a/staff/armando-alonso/react-app/index.html
+++ b/staff/armando-alonso/react-app/index.html
@@ -11,11 +11,15 @@
 <body class="h-full bg-[#fffde7]">
     <div id="root"></div>
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script  src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script  src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
 
     <script src="libs/coolog.js" type="text/babel"></script>
+
+    <script src="libs/babel.min.js"></script>
+    <script src="libs/react.development.js"></script>
+    <script src="libs/react-dom.development.js"></script>
 
     <script src="utils/regex.js"></script>
 
