Update task status handlers

--- a/staff/cristina-marquez/react-app/index.html
+++ b/staff/cristina-marquez/react-app/index.html
@@ -29,6 +29,7 @@
     <script src="./logic/authenticate-user.js"></script>
     <script src="./logic/retrieve-task.js"></script>
     <script src="./logic/update-task.js"></script>
+    <script src="./logic/update-task-status.js"></script>
     <script src="./logic/create-task.js"></script>
     <script src="./logic/delete-task.js"></script>
 
