add pasive atack and add more logics

--- a/staff/xavier-zamora/alienize/index.html
+++ b/staff/xavier-zamora/alienize/index.html
@@ -35,6 +35,7 @@
     <script src="logics/log-logics/register-user.js"></script>
 
     <script src="pages/BattlePage.jsx" type="text/babel"></script>
+    <script src="pages/BattleMenuPage.jsx"></script>
     <script src="pages/LoginPage.jsx" type="text/babel"></script>
     <script src="pages/RegisterPage.jsx" type="text/babel"></script>
     <script src="pages/HomePage.jsx" type="text/babel"></script>
