--- a/staff/cristina-marquez/react-app/index.html
+++ b/staff/cristina-marquez/react-app/index.html
@@ -32,6 +32,7 @@
     <script src="./logic/update-task-status.js"></script>
     <script src="./logic/create-task.js"></script>
     <script src="./logic/delete-task.js"></script>
+    <script src="./logic/update-user-email.js"></script>
 
 
     <script src="./pages/LoginPage.jsx" type="text/babel"></script>
