move header into its own component (refactor react app)

--- a/staff/manuel-barzi/react-app.5/index.html
+++ b/staff/manuel-barzi/react-app.5/index.html
@@ -35,10 +35,9 @@
     <script src="logic/delete-task.js"></script>
     <script src="logic/update-task-status.js"></script>
     
-    <script src="pages/Login.jsx" type="text/babel"></script>
-    <script src="pages/Register.jsx" type="text/babel"></script>
-    <script src="components/Header.jsx" type="text/babel"></script>
-    <script src="pages/Home.jsx" type="text/babel"></script>
+    <script src="pages/LoginPage.jsx" type="text/babel"></script>
+    <script src="pages/RegisterPage.jsx" type="text/babel"></script>
+    <script src="pages/HomePage.jsx" type="text/babel"></script>
     <script src="components/App.jsx" type="text/babel"></script>
     
     <script src="index.jsx" type="text/babel"></script>
