--- a/staff/federico-lopez/react-app/index.html
+++ b/staff/federico-lopez/react-app/index.html
@@ -15,9 +15,9 @@
 <body class="h-full">
     <div id="root" class="h-full flex items-center justify-center"></div>
 
-    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+    <script src="libs/react.development.js"></script>
+    <script src="libs/react-dom.development.js"></script>
+    <script src="libs/babel.min.js"></script>
 
     <script src="libs/coolog.js"></script>
     
@@ -33,6 +33,7 @@
     <script src="logic/create-task.js"></script>
     <script src="logic/update-task-text.js"></script>
     <script src="logic/delete-task.js"></script>
+    <script src="logic/update-task-status.js"></script>
     
     <script src="pages/LoginPage.jsx" type="text/babel"></script>
     <script src="pages/RegisterPage.jsx" type="text/babel"></script>
