--- a/staff/xavi-grandes/React-app/index.html
+++ b/staff/xavi-grandes/React-app/index.html
@@ -11,9 +11,9 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="h-full">
+<body class="h-screen">
     
-    <div class="h-full flex items-center justify-center bg-gradient-to-b from-blue-400 to-stone-50 bg-no-repeat" id="root"></div>
+    <div class="h-screen flex items-center justify-center bg-gradient-to-b from-blue-400 to-stone-50 bg-no-repeat" id="root"></div>
 
     <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
