add logic Status task into html index and update into Homepage to move the task into the differents status

--- a/staff/xavi-grandes/React-app/index.html
+++ b/staff/xavi-grandes/React-app/index.html
@@ -42,6 +42,7 @@
     <script src="logic/create-task.js"></script>
     <script src="logic/update-task-text.js"></script>
     <script src="logic/delete-task.js"></script>
+    <script src="logic/update-task-status.js"></script>
 
     <script src="pages/LoginPage.jsx" type="text/babel"></script>
     <script src="pages/RegisterPage.jsx" type="text/babel"></script>
