create new Header component and separate it from the Home

--- a/staff/xavi-grandes/React-app/index.html
+++ b/staff/xavi-grandes/React-app/index.html
@@ -46,6 +46,7 @@
 
     <script src="pages/LoginPage.jsx" type="text/babel"></script>
     <script src="pages/RegisterPage.jsx" type="text/babel"></script>
+    <script src="components/header.jsx" type="text/babel"></script>
     <script src="pages/HomePage.jsx" type="text/babel"></script>
     <script src="components/App.jsx" type="text/babel"></script>
     
