react app, navbar compo added + settings

--- a/staff/cristina-marquez/react-app/index.html
+++ b/staff/cristina-marquez/react-app/index.html
@@ -39,6 +39,7 @@
     <script src="./pages/RegisterPage.jsx" type="text/babel"></script>
     <script src="./pages/HomePage.jsx" type="text/babel"></script>
 
+    <script src="./components/Navbar.jsx" type="text/babel"></script>
     <script src="./components/App.jsx" type="text/babel"></script>
 
     <script src="index.jsx" type="text/babel"></script>
