--- a/staff/jaume-rodriguez/xapp/index.html
+++ b/staff/jaume-rodriguez/xapp/index.html
@@ -42,10 +42,11 @@
     <script src="pages/RegisterPage.jsx" type="text/babel"></script>
     <script src="pages/LoginPage.jsx" type="text/babel"></script>
 
+    <script src="components/Task.jsx" type="text/babel"></script>
     <script src="components/Tasks.jsx" type="text/babel"></script>
     <script src="components/Header.jsx" type="text/babel"></script>
-    <script src="components/App.jsx" type="text/babel"></script>
 
+    <script src="App.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
   </body>
 </html>
