react app settings and task compos

--- a/staff/cristina-marquez/react-app/index.html
+++ b/staff/cristina-marquez/react-app/index.html
@@ -20,7 +20,7 @@
     <script src="./libs/react-dom.development.js"></script>
     <script src="./libs/babel.min.js"></script>
 
-    <script src="utils/coolog.js"></script>
+    <script src="./utils/coolog.js"></script>
     <script src="./utils/regex.js"></script>
 
     <script src="./data/users.js"></script>
@@ -40,6 +40,9 @@
     <script src="./pages/HomePage.jsx" type="text/babel"></script>
 
     <script src="./components/Navbar.jsx" type="text/babel"></script>
+    <script src="./components/Settings.jsx" type="text/babel"></script>
+    <script src="./components/Tasks.jsx" type="text/babel"></script>
+    <script src="./components/Task.jsx" type="text/babel"></script>
     <script src="./components/App.jsx" type="text/babel"></script>
 
     <script src="index.jsx" type="text/babel"></script>
