--- a/staff/armando-alonso/react-app/index.html
+++ b/staff/armando-alonso/react-app/index.html
@@ -15,11 +15,11 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script  src="https://unpkg.com/@babel/standalone/babel.min.js"></script> -->
 
-    <script src="libs/coolog.js" type="text/babel"></script>
-
     <script src="libs/babel.min.js"></script>
     <script src="libs/react.development.js"></script>
     <script src="libs/react-dom.development.js"></script>
+
+    <script src="libs/coolog.js"></script>
 
     <script src="utils/regex.js"></script>
 
@@ -33,10 +33,16 @@
     <script src="logic/delete-task.js"></script>
     <script src="logic/create-task.js"></script>
     <script src="logic/update-task-text.js"></script>
+    <script src="logic/update-task-status.js"></script>
     
-    <script src="pages/HomePage.jsx" type="text/babel"></script>
-    <script src="pages/RegisterPage.jsx" type="text/babel"></script>
-    <script src="pages/LoginPage.jsx" type="text/babel"></script>
+    <script src="components/Task.jsx" type="text/babel"></script>
+    <script src="components/Header.jsx" type="text/babel"></script>
+    <script src="components/Tasks.jsx" type="text/babel"></script>
+    <script src="components/Settings.jsx" type="text/babel"></script>
+
+    <script src="pages/Register.jsx" type="text/babel"></script>
+    <script src="pages/Login.jsx" type="text/babel"></script>
+    <script src="pages/Home.jsx" type="text/babel"></script>
     <script src="components/App.jsx" type="text/babel"></script>
 
     <script src="index.jsx" type="text/babel"></script>
