added a new and improved task creation system for the react App ( wapp ). They are now all created from a function and a new status argument has been added. Also App, Tasks and Task components have been converted to Hooks

--- a/staff/jaume-rodriguez/wapp/index.html
+++ b/staff/jaume-rodriguez/wapp/index.html
@@ -46,7 +46,7 @@
     <script src="components/Tasks.jsx" type="text/babel"></script>
     <script src="components/Header.jsx" type="text/babel"></script>
 
-    <script src="App.jsx" type="text/babel"></script>
+    <script src="components/App.jsx" type="text/babel"></script>
     <script src="index.jsx" type="text/babel"></script>
   </body>
 </html>
