--- a/staff/federico-alejandro/React-app-hooks/index.html
+++ b/staff/federico-alejandro/React-app-hooks/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div id="root" class="h-screen flex items-center justify-center"></div>
+    <div id="root" class="flex items-center justify-center"></div>
     
     
     <script src="libs/coolog.js"></script>
