--- a/staff/xavi-grandes/React-app/index.html
+++ b/staff/xavi-grandes/React-app/index.html
@@ -47,6 +47,7 @@
     <script src="pages/LoginPage.jsx" type="text/babel"></script>
     <script src="pages/RegisterPage.jsx" type="text/babel"></script>
     <script src="components/header.jsx" type="text/babel"></script>
+    <script src="components/Settings.jsx" type="text/babel"></script>
     <script src="pages/HomePage.jsx" type="text/babel"></script>
     <script src="components/App.jsx" type="text/babel"></script>
     
