--- a/staff/jaume-rodriguez/server/app/index.html
+++ b/staff/jaume-rodriguez/server/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-sky-100">
+<html lang="en" class="h-full bg-slate-300">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
