--- a/staff/federico-alejandro/ReactApp/index.html
+++ b/staff/federico-alejandro/ReactApp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class='h-full'>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class=>
-    <div id="root" class="h-full flex items-center justify-center"></div>
+    <div id="root" class="flex items-center justify-center"></div>
 
     
     <script src="libs/babel.min.js"></script>
