--- a/staff/armando-alonso/vehicles-app/index.html
+++ b/staff/armando-alonso/vehicles-app/index.html
@@ -7,11 +7,12 @@
     <title>Vehicles</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="h-full">
+    <div id="root" class="h-full flex justify-center"></div>
     
     <script src="libs/babel.min.js"></script>
-    <script src="libs/react-dom.development.js"></script>
     <script src="libs/react.development.js"></script>
+    <script src="libs/react-dom.development.js"></script>
 
     <script src="libs/coolog.js"></script>
 
