--- a/staff/sergio-asensio/my-app.2/public/index.html
+++ b/staff/sergio-asensio/my-app.2/public/index.html
@@ -19,7 +19,7 @@
 
     <script src="./libs/react.development.js"></script>
     <script src="./libs/react-dom.development.js"></script>
-    <script src="./libs/babel.js"></script>
+    <script src="./libs/babel.min.js"></script>
 
     <script src="./index.jsx" type="text/babel"></script>
 </body>
