--- a/staff/cristina-marquez/my-react-app/public/index.html
+++ b/staff/cristina-marquez/my-react-app/public/index.html
@@ -21,7 +21,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Calendar 📆</title>
+  <title>Blog 📆</title>
 </head>
 
 <body>
