--- a/staff/xavi-grandes/my-react-app/public/index.html
+++ b/staff/xavi-grandes/my-react-app/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body class="h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" class="h-full flex items-center justify-center bg-blue-200"></div>
+    <div id="root" class="h-full bg-blue-200"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
