--- a/staff/ignacio-nuñez/custom-app/public/index.html
+++ b/staff/ignacio-nuñez/custom-app/public/index.html
@@ -12,7 +12,7 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="root" style="height: 100vh;"></div>
+    <div id="root" style="min-height: 100vh;"></div>
     
   </body>
 </html>
