--- a/staff/xavi-grandes/my-project/app/public/index.html
+++ b/staff/xavi-grandes/my-project/app/public/index.html
@@ -12,8 +12,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>My Project - Xavi Grandes</title>
   </head>
-  <body>
+  <body class="h-full">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="h-full"></div>
   </body>
 </html>
