--- a/staff/yubal-hormiga/project/app/public/index.html
+++ b/staff/yubal-hormiga/project/app/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-green-100">
+<html lang="en" class=" bg-green-100">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
