--- a/staff/federico-alejandro/project/app/public/index.html
+++ b/staff/federico-alejandro/project/app/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="h-full bg-white dark:bg-black text-black dark:text-white">
+  <body class="h-full bg-white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-full"></div>
     <!--
