--- a/staff/yubal-hormiga/project/app/public/index.html
+++ b/staff/yubal-hormiga/project/app/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class=" bg-green-100">
+<html lang="en" class=" ">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -26,7 +26,7 @@
     -->
     <title>React App</title>
   </head>
-  <body class="h-full bg-green-100">
+  <body class="h-full ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-full"></div>
     <!--
